Moved the addl config from adserver properties to tasker

--- a/tasker-service.properties
+++ b/tasker-service.properties
@@ -6,3 +6,7 @@ management.endpoints.web.exposure.include=*
 
 # the tasker-service will use this as the greeting that it serves up
 officialGreeting="Welcome To Tasker. :)"
+
+adserverApi=adserver-service
+serviceProtocol=http://
+servicePath=/ad
